fix some spacing and add the updated block to pull from for latest

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -107,6 +107,13 @@
   }
 }
 
+#latest {
+  .callout-container {
+    margin-top: 100px;
+    padding-top: 30px;
+  }
+}
+
 @media (max-width: 1259px) {
 }
 
